[package]
name = "cvar"
version = "0.2.0"
edition = "2018"
authors = ["Casper <CasualX@users.noreply.github.com>"]

description = "Configuration variables."

documentation = "https://docs.rs/cvar"
repository = "https://github.com/CasualX/cvar"

readme = "readme.md"

keywords = ["config", "var", "dvar", "convar"]

license = "MIT"
