[package]
name = "cvar"
version = "0.4.1"
edition = "2021"
authors = ["Casper <CasualX@users.noreply.github.com>"]

description = "Configuration variables."

documentation = "https://docs.rs/cvar"
repository = "https://github.com/CasualX/cvar"

readme = "readme.md"

keywords = ["config", "var", "dvar", "convar"]

license = "MIT"

[features]
type_name = []
